<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~  *
  ~  *    Licensed under the Apache License, Version 2.0 (the "License");
  ~  *    you may not use this file except in compliance with the License.
  ~  *    You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  *    Unless required by applicable law or agreed to in writing, software
  ~  *    distributed under the License is distributed on an "AS IS" BASIS,
  ~  *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *    See the License for the specific language governing permissions and
  ~  *    limitations under the License.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginTop="89dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@android:drawable/ic_lock_lock"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:contentDescription="@string/lockimage" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="?android:attr/fingerprintAuthDrawable"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:layout_marginTop="235dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@android:drawable/ic_menu_view"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:gravity="left|center_vertical"
        android:text="@string/pin_lock_authentication"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="165dp"
        android:gravity="left|center_vertical"
        android:text="@string/fingerprint_authentication"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="235dp"
        android:gravity="left|center_vertical"
        android:text="@string/_3d_face_recognition"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="341dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:text="@string/AppConditionText"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="48dp" />

    <CheckBox
        android:id="@+id/AgreeCheckbox"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
        android:checked="false"
        android:gravity="center"
        android:onClick="onAgreeCheckClick"
        android:text="@string/agree_to_proceed"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints,OnClick" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgreeCheckbox"
        app:layout_constraintVertical_bias="0.561"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>