<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~  *
  ~  *    Licensed under the Apache License, Version 2.0 (the "License");
  ~  *    you may not use this file except in compliance with the License.
  ~  *    You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  *    Unless required by applicable law or agreed to in writing, software
  ~  *    distributed under the License is distributed on an "AS IS" BASIS,
  ~  *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *    See the License for the specific language governing permissions and
  ~  *    limitations under the License.
  ~  */
  -->


<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/li_listempty"
                android:layout_width="350dp"
                android:layout_height="550dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_empty_list"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/imgemptylist"
                    android:src="@drawable/ic_empty_search" />

                <TextView
                    android:id="@+id/txt_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/list_empty"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/rel_scan"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/oval_blue_button">

                    <ImageView
                        android:id="@+id/img_camera"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/imgcamera"
                        android:padding="2dp"
                        android:src="@drawable/ic_menu_camera_white" />

                    <TextView
                        android:id="@+id/txt_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/img_camera"
                        android:text="@string/scan_card"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bankcardRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:scrollbars="vertical"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rel_bottom_scan"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"

                android:background="@drawable/oval_blue_button"
                android:padding="2dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/img_bottom_camera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/imgbottomcamera"
                    android:padding="2dp"
                    android:src="@drawable/ic_menu_camera_white" />

                <TextView
                    android:id="@+id/txt_bottom_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_bottom_camera"
                    android:text="@string/addcard"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout><!--</androidx.cardview.widget.CardView>-->
</layout>